# final_thesis

D3Dnet/: README.md
D3Dnet/code/: __init__.py  data_utils.py  deformable_3d.py  model.py  model_d3c.py  model_d3c_warp_loss.py  model_warp_loss.ipynb  test.ipynb
Diffusion/: depth_eval.py  losses.py  opt.py  requirements.txt  run.py  run.sh  run_refine.py  run_refine_without_image_enhancement.py  train.py
Diffusion/configs/: DTU.yml  DTU2.yml  DTU_ablation1.yml
Diffusion/datasets/: __init__.py  data_augment.py  dataset.py  dtu.py
Diffusion/metrics/: __init__.py
Diffusion/models/: ddm.py  lora.py  losses.py  mods.py  modules.py  mvsnet.py  unet.py
Diffusion/utils/: __init__.py  visualization.py
Fast-Neural-Style-Transfer/: deptLoss.py  eval copy.ipynb  eval.ipynb  models.py  train.py  utils.py
RetinexNet_PyTorch/: predict.py  train.py
VQGAN-pytorch/: deptLoss.py  training_vqgan.py  utils.py  vqgan.py
ViewDiff/: requirements.txt
ViewDiff/logs/: events.out.tfevents.1711411719.maxzhang-kx78g1p11eyb-main.1835.0  events.out.tfevents.1711411938.maxzhang-kx78g1p11eyb-main.2556.0  events.out.tfevents.1711411984.maxzhang-kx78g1p11eyb-main.2636.0  events.out.tfevents.1711412129.maxzhang-kx78g1p11eyb-main.3378.0  events.out.tfevents.1711412343.maxzhang-kx78g1p11eyb-main.4109.0  (+1 more)
ViewDiff/viewdiff/: Untitled-1.py  train.py  (+15 more)
edit_data/add_light/: CMakeLists.txt  add_light.cpp
mvs_training/: bbox.pkl
project/: run.py  run_control.py  test.ipynb
taming-transformers/: main_fine_rename.py  main_fine_tune.py  main_fine_tune_transformer.py  transformer_test.ipynb
(+1789 files in other folders)
